@startuml entityDiagram
title ERD
left to right direction
hide circle
skinparam linetype ortho
hide empty methods
hide empty members

entity "User" as user
{
    login
    password
    name
    surname
}

entity "Playlist" as playlist
{
    name
}

entity "PlaylistItem" as song
{
    title
    ytID
}

user ||--o{ playlist
playlist ||--o{ song
@enduml